# bjp-checker

./: .gitattributes  .gitignore  .project  Cargo.toml  Java  README.md  WRITEUP.md  add-bjp3-parser.cmd  build.cmd  pom.xml  setup.cmd
.cargo/: config.toml
annotations/: pom.xml
api/: pom.xml
api/src/main/java/: module-info.java
api/src/main/resources/: book-tests.xsd
bjp3-checker-annotations/: pom.xml
bjp3-checker-annotations/src/main/java/: module-info.java
bjp3-checker-annotations/src/main/resources/: book.xml
books/: pom.xml  pom.xml.versionsBackup
books/src/main/java/: module-info.java
books/src/main/resources/: book-schema.xsd
checking/: pom.xml  pom.xml.versionsBackup
checking/src/main/java/: module-info.java
checking/src/main/native/: dev_liambloom_checker_internal_Native.cpp  dev_liambloom_checker_internal_Native.h
internal/: pom.xml
internal/src/main/java/: module-info.java
internal/src/main/native/: compilation-notes.md  dev_liambloom_checker_BookReader.cpp
java/rsc/: book-tests.xsd
lib/xerces/xercesImpl-XSD-1.1/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
rsc/: book-tests.xsd
rsc/css/: Main.css
rsc/help/: check.txt  glob.txt
rsc/tests/: bjp3.xml
rsc/views/: ListTestItem.fxml  Main.fxml  TestListItem.fxml
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
shared/: pom.xml
src/: bin.rs  module-info.java
src/main/resources/: book-tests.xsd  tests.xml
src/rust/: lib.rs
ui/: pom.xml  pom.xml.versionsBackup
xmlBook/: pom.xml  pom.xml.versionsBackup
(+433 files in other folders)
