[package]
name = "bjp-tests"
version = "0.1.0"
authors = ["liambloom <liamrbloom@gmail.com>"]
edition = "2018"

[lib]
path = "src/rust/lib.rs"

[[bin]]
name = "checker"
path = "src/rust/bin/cli.rs"
required-features = ["cli"]


[[bin]]
name = "checker-gui"
path = "src/rust/bin/gui.rs"
required-features = ["gui"]

[dependencies]
native-dialog = { version = "0.5", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", optional = true, features = ["wincon", "errhandlingapi", "winbase", "processenv", "winnt"] }

[features]
cli = ["winapi"]
gui = ["native-dialog"]