[package]
name = "bjp-tests"
version = "0.1.0"
authors = ["liambloom <liamrbloom@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "checker"
path = "src/bin/cli.rs"
required-features = ["cli"]


[[bin]]
name = "checker-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[dependencies]
chrono = "0.4"
native-dialog = { version = "0.5", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", optional = true, features = ["wincon", "wincontypes", "consoleapi", "winerror"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[features]
cli = ["winapi", "libc"]
gui = ["native-dialog"]